nvidia-graphics-drivers (465.24.02-2) UNRELEASED; urgency=medium

  * libcuda1: Add Provides: libcuda-11.3-1{,-i386}.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 04 May 2021 15:09:18 +0200

nvidia-graphics-drivers (465.24.02-1) experimental; urgency=medium

  * New upstream new feature branch release 465.24.02 (2021-04-14).
    * Fixed CVE-2021-1076, CVE-2021-1077.  (Closes: #987216)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5172
  * New upstream beta 465.19.01 (2021-03-30).
    - Improved X11 DrawText() performance when rendering stippled text.
    - Fixed a bug that could prevent some hardware configurations with large
      numbers of displays connected to the same GPU from working correctly.
    - Fixed a bug that could cause multi-threaded GLX applications to hang
      while attempting to handle an XError.
    - Fixed a potential crash in the Vulkan driver when clearing images with
      multiple layers.
    - Fixed a bug with the host-visible device-local memory heap, where if an
      allocation failed due to space constraints, it could cause the application
      to crash on future Vulkan function calls.
    - Fixed corruption in the Vulkan driver that sometimes occurred with shadow
      rendering with image arrays.
    - Added support for the VK_KHR_synchronization2 extension.
    - Added support for the VK_KHR_workgroup_memory_explicit_layout extension.
    - Added support for the VK_KHR_zero_initialize_workgroup_memory extension.
    - Added support for linear images for use with host-visible video memory in
      Vulkan.
    - Fixed an issue with OpenGL where imported Vulkan buffers would fail with
      GL_OUT_OF_MEMORY when marked as resident.
    - Fixed a bug that caused the NVIDIA driver to retain an incorrect
      memory mapping of the UEFI system console when booting with the
      kernel parameter pci=realloc. This could cause the console to corrupt
      memory in use by the NVIDIA driver, and vice versa.