@@ -1,5 +1,5 @@
 4473221da4a31f58dc4b33fbb3b8014e  debian/control
 bd3f5554c17f6090a6946f6af967ae38  debian/control.in
 db12f898b07cdaf431ad34bd68a1662e  debian/gen-control.pl
-de7c9eee1eb720f20919408f850af51a  debian/rules
+1a6399f2003288c407b4194d34900422  debian/rules
 ad2d99597ef1a57bf22688001c2eb3a7  debian/rules.defs
