@@ -23,6 +23,10 @@ BUILT_MODULE_NAME[2]="nvidia-drm"
 DEST_MODULE_NAME[2]="$PACKAGE_NAME-drm"
 DEST_MODULE_LOCATION[2]="/updates/dkms"
 
-#HAS_UVM#BUILT_MODULE_NAME[3]="nvidia-uvm"
-#HAS_UVM#DEST_MODULE_NAME[3]="$PACKAGE_NAME-uvm"
-#HAS_UVM#DEST_MODULE_LOCATION[3]="/updates/dkms"
+BUILT_MODULE_NAME[3]="nvidia-peermem"
+DEST_MODULE_NAME[3]="$PACKAGE_NAME-peermem"
+DEST_MODULE_LOCATION[3]="/updates/dkms"
+
+#HAS_UVM#BUILT_MODULE_NAME[4]="nvidia-uvm"
+#HAS_UVM#DEST_MODULE_NAME[4]="$PACKAGE_NAME-uvm"
+#HAS_UVM#DEST_MODULE_LOCATION[4]="/updates/dkms"
