@@ -4,6 +4,8 @@ install nvidia-modeset modprobe nvidia ; modprobe -i #MODULE#-modeset $CMDLINE_O
 
 install nvidia-drm modprobe nvidia-modeset ; modprobe -i #MODULE#-drm $CMDLINE_OPTS
 
+install nvidia-peermem modprobe nvidia ; modprobe -i #MODULE#-peermem $CMDLINE_OPTS
+
 #HAS_UVM#install nvidia-uvm modprobe nvidia ; modprobe -i #MODULE#-uvm $CMDLINE_OPTS
 
 remove nvidia modprobe -r -i #UNLOAD_MODULES#
