@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (465.24.02-2) UNRELEASED; urgency=medium
 
   * libcuda1: Add Provides: libcuda-11.3-1{,-i386}.
+  * Build the nvidia-peermem kernel module.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 04 May 2021 15:09:18 +0200
 
